# variational-sdk-python

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yaml
tests/: test_backoff.py  test_rounding.py  test_smoke.py
variational/: __init__.py  auth.py  client.py  models.py  paginate.py  permit.py  polling.py  rounding.py  wrappers.py
variational/models/: __init__.py  aliases.py  enums.py  nested.py  top_level.py
